--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Cache node modules
+      - name: Cache node_modules
         uses: actions/cache@v1
         with:
           path: ~/.npm
