--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,5 +28,6 @@ jobs:
       - run: npm run lint
       - run: npm run build:prod
       - run: npm run test:ci
+      - run: npm run deploy:hosting
         env:
           CI: true
