--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:ci": "ng test --watch=false --browsers=ChromeHeadlessCustom",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy-hosting": "ng build --prod && node_modules/.bin/firebase deploy --only hosting:ultra-marathon-training"
+    "deploy:hosting": "ng build --prod && node_modules/.bin/firebase deploy --only hosting:ultra-marathon-training"
   },
   "private": true,
   "dependencies": {
