--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
   push:
     paths-ignore:
       - 'e2e/**'
+      - 'README.md'
+      - '.editorconfig'
+      - '**/.gitignore'
+      - '*.spec.ts'
 
 jobs:
   build:
