--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "test": "ng test",
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadlessCustom",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy-hosting": "ng build --prod && node_modules/.bin/firebase deploy --only hosting:ultra-marathon-training"
+    "deploy:hosting": "ng build --prod && node_modules/.bin/firebase deploy --only hosting:ultra-marathon-training"
   },
   "private": true,
   "dependencies": {
