--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,14 @@
 name: Node.js CI
 
-on: push
+on:
+  push:
+    branches:
+      - '*'
+      - '!master'
+    paths-ignore:
+      - 'README.md'
+      - '.editorconfig'
+      - '**.gitignore'
 
 jobs:
   build:
